# witness-angel-authenticator

./: .gitignore  LICENSE.txt  Readme.rst  authenticator_creation_form.kv  authenticator_creation_form.py  buildozer.spec  buildozer_blacklist.txt  config_schema.json  config_template.ini  keyring_selector.kv  keyring_selector.py  main.py  pip_requirements_export.txt  pyinstaller.spec  pyproject.toml  update_i18n.sh  wa_authenticator_gui.kv  wa_authenticator_gui.py  wa_keygen_gui.kv  wa_keygen_gui.py
WardProject/: key_device.py  main.kv
assets/: icon_authenticator_512x512.icns
assets/AuthenticatorAppIcons.appiconset/: Contents.json
locale/en/: witnessangel.po
locale/en/LC_MESSAGES/: witnessangel.po
locale/fr/LC_MESSAGES/: witnessangel.mo  witnessangel.po
scripts/: update_wa_subcomponents.cmd
src/waauthenticator/: waauthenticator_gui.kv  waauthenticator_gui.py
waauthenticator/: config_defaults.ini  waauthenticator_gui.kv  waauthenticator_gui.py
