[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "witness-angel-authenticator"
description = "Witness Angel Authenticator"
version = "0.2"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Akram Bourichi", "Francinette Atchade"]
homepage = "https://github.com/WitnessAngel/witness-angel-authenticator"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = []
exclude = []


[tool.poetry.dependencies]
python = ">=3.7, <=3.10"

# Cryptography
wacryptolib = { git = "https://github.com/WitnessAngel/witness-angel-cryptolib.git", branch = "wakeygen_stable" }
wacomponents = { git = "https://github.com/WitnessAngel/witness-angel-components.git", branch = "wakeygen_stable" }

# Wacomponents dependencies
Kivy = {version = "^2.0.0", extras = ["base"]}
kivymd = "^0.104.1"
plyer = "^2.0.0"
psutil = "^5.8.0"
Pillow = "8.1.2"  # Fix bug with _imagingft.cp38-win_amd64.pyd crash of Pillow 8.3.2


[tool.poetry.dev-dependencies]

PyInstaller = "^4.2"
