[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "witness-angel-authenticator"
description = "Witness Angel Authenticator"
version = "1.0"
license = "MIT"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Akram Bourichi", "Francinette Atchade"]
homepage = "https://github.com/WitnessAngel/witness-angel-authenticator"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = []
exclude = []


[tool.poetry.dependencies]
python = ">=3.8, <4.0"

# Cryptography
wacryptolib = { git = "https://github.com/WitnessAngel/witness-angel-cryptolib.git", branch = "wakeygen_stable" }
wacomponents = { git = "https://github.com/WitnessAngel/witness-angel-components.git", branch = "wakeygen_stable" }

# Wacomponents dependencies
Kivy = {version = "^2.2.1", extras = ["base"]}
kivymd = "^1.1.1"
plyer = "^2.1.0"
psutil = "^5.9.5"
Pillow = "^10.0.0"


[tool.poetry.dev-dependencies]

PyInstaller = ">=4.2"
