[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "witness-angel-authenticator"
description = "Witness Angel Authenticator"
version = "1.2"
license = "GPL-2.0-or-later"
readme = "Readme.rst"
authors = ["Pascal Chambon", "Akram Bourichi", "Francinette Atchade"]
homepage = "https://github.com/WitnessAngel/witness-angel-authenticator"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
include = []
exclude = []


[tool.poetry.dependencies]
python = ">=3.8, <3.13"

# For now WA dependencies must be manually installed at selected versions !
wacryptolib = { git = "https://github.com/WitnessAngel/witness-angel-cryptolib.git", branch = "wakeygen_stable" }
wacomponents = { git = "https://github.com/WitnessAngel/witness-angel-components.git", branch = "wakeygen_stable" }

# Wacomponents dependencies
Kivy = {version = "^2.2.1", extras = ["base"]}
kivymd = { url = "https://github.com/kivymd/kivymd/archive/1152d3c312.zip" }
plyer = "^2.1.0"
psutil = "^5.9.5"
Pillow = "^10.0.0"


[tool.poetry.dev-dependencies]

PyInstaller = ">=5.2"
